# multi-vpn-bot

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  context.py  main.py
app/bot/: __init__.py  menu_sections.py  runtime.py  user_admin_actions.py
app/bot/callbacks/: __init__.py  admin_users.py  menu.py  servers.py
app/bot/filters/: __init__.py  role.py
app/bot/formatters/: __init__.py  admin_users.py  menu.py  servers.py
app/bot/handlers/: __init__.py  admin_users.py  common.py  navigation.py  relay.py  (+2 more)
app/core/: exceptions.py
app/providers/: __init__.py  base.py  builtin.py  capabilities.py  factory.py  registry.py  wireguard.py
configs/: config.example.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_TASKS.md
tests/: test_access_service.py  test_admin_audit_service.py  test_admin_traffic_formatter.py  test_admin_traffic_handlers.py  test_admin_traffic_keyboard.py  test_admin_traffic_stats.py  test_admin_user_formatter.py  test_admin_user_keyboard.py  test_client_inventory_service.py  test_config_delivery_service.py  test_config_loader.py  test_config_request_handlers.py  test_executor_factory.py  test_host_actions_service.py  test_local_executor.py  test_main_menu_keyboard.py  test_menu_formatter.py  test_message_bridge_service.py  test_provider_client_sync_service.py  test_provider_registry.py  test_runtime_dependencies.py  test_server_handlers.py  test_server_keyboards.py  test_server_menu_formatter.py  test_server_registry.py  test_traffic_stats_service.py  test_user_config_handlers.py  test_user_stats_handlers.py  test_wireguard_provider.py
(+54 files in other folders)
