[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-vpn-bot"
version = "0.1.0"
description = "Modular Telegram bot for managing VPN services, client configs, and traffic statistics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20.0,<4.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "asyncssh>=2.15.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.4.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--basetemp=tmp_pytest -o cache_dir=tmp_pytest_cache"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
packages = ["app"]
